--- a/PaintThisWebsite/style.css
+++ b/PaintThisWebsite/style.css
@@ -25,14 +25,14 @@ h2 {
     align-content: center;
     margin-left: 60%;
     margin-bottom: 40px;
-    border: 7px, solid, black;
+    border: 7px solid black;
     line-height: 30px;
 }
 
 a {
     margin: 20px;
     margin-right: 50%;
-    border: 5px, ridge, black;
+    border: 5px ridge black;
 }
 
 
